# pycopcor

./: .clang-format  README.md  pyproject.toml  setup.py
copcor/: CMakeLists.txt  TargetCompileOptimisation.cmake
copcor/src/: utils.c  utils.h
copcor/src/copula/: entropy.c  entropy.h  wolff.c  wolff.h
copcor/src/marginal/: density.c  density.h
notebooks/2D data/: comparision_gaussian.ipynb  comparision_overlay.ipynb  comparision_random.ipynb
notebooks/3D data/: comparision_gaussian.ipynb
src/: __init__.py  exception.hpp  helper.hpp  marginal.py
src/copula/: __init__.py  entropy.cpp  entropy.py  wolff.cpp  wolff.py
src/utils/: __init__.py  utils.cpp
tests/: evaluate_normal_distribution.py  performance_density.py  performance_entropy.py  performance_utils.py  performance_wolff.py  test_util.py  test_wolff.py
